fixed async bug in reviewRepo, fixed login in spa

--- a/spa/index.html
+++ b/spa/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
-    <script src="/navigation.js"></script>
+    <link rel="stylesheet" href="./styles.css">
+    <script src="./navigation.js"></script>
     <title>SPA</title>
 </head>
 <body>
@@ -66,7 +66,7 @@
 
         <div class="page" id="login-page">
             <h1>Login</h1>
-            <form action="/rest/login" method="POST">
+            <form action="/rest/login" method="POST" id="loginForm">
                 <input type="text" placeholder="Username" name="username" id="username" required>
                 <input type="password" placeholder="Password" name="password" id="password" required>
                 <div class="padding">
